--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
-pyjwt==1.7.1
-flask==1.1.2
-Jinja2<3.0.0
-MarkupSafe<2.0.0
+PyJWT==1.7.1
+cfnresponse==1.1.5
+Flask==3.0.3
+Jinja2==3.1.4
+MarkupSafe==2.1.5
 ruamel.yaml==0.16.5
-itsdangerous==2.0.1
-werkzeug==2.0.3
-gunicorn==20.0.4
-pytest==6.2.2
+itsdangerous==2.2.0
+Werkzeug==3.0.3
+gunicorn==23.0.0
+pytest==8.3.4
+urllib3==2.2.3
