--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,10 +15,10 @@ phases:
       # For example, a 1.21 kubectl client works with Kubernetes 1.20, 1.21 and 1.22 clusters.
       # Ref: https://docs.aws.amazon.com/eks/latest/userguide/install-kubectl.html OR https://kubernetes.io/docs/tasks/tools/install-kubectl-linux/
       # To download a specific version v1.27.9 on Linux, use:
-      - curl -O https://dl.k8s.io/release/v1.30.0/bin/linux/amd64/kubectl
+      - curl -O https://s3.us-west-2.amazonaws.com/amazon-eks/1.30.7/2024-12-12/bin/linux/amd64/kubectl
       # Download the kubectl checksum file
 
-      - curl -O "https://dl.k8s.io/v1.30.0/bin/linux/amd64/kubectl.sha256"
+      - curl -O https://s3.us-west-2.amazonaws.com/amazon-eks/1.30.7/2024-12-12/bin/linux/amd64/kubectl.sha256
       # Validate the kubectl binary against the checksum file
 
       - sha256sum -c kubectl.sha256
